<resources>
    <string name="app_name">Cupcake</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_cupcake">one cupcake</string>
    <string name="six_cupcakes">six cupcakes</string>
    <string name="twelve_cupcakes">twelve cupcakes</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\n Thank you!</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="total">TOTAL %s</string>
    <string name="send">send order to another app</string>
    <string name="pickup_date">PICKUP DATE</string>
    <string name="quantity">QUANTITY</string>
    <string name="flavor">FLAVOR</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>