<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="com.example.cupcake.fragments.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FlavorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/rb_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/vanilla_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                    android:text="@string/vanilla" />

                <RadioButton
                    android:id="@+id/choco_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                    android:text="@string/chocolate" />

                <RadioButton
                    android:id="@+id/velvet_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                    android:text="@string/red_velvet" />

                <RadioButton
                    android:id="@+id/caramel_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                    android:text="@string/salted_caramel" />

                <RadioButton
                    android:id="@+id/coffee_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                    android:text="@string/coffee" />

            </RadioGroup>

            <View
                android:id="@+id/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/rb_group" />

            <TextView
                android:id="@+id/subtotal_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@{@string/subtotal(viewModel.price)}"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtotal_tv" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/subtotal_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

