<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SummaryFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantity_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.quantity.toString()}"
                app:layout_constraintStart_toStartOf="@+id/quantity_tv"
                app:layout_constraintTop_toBottomOf="@+id/quantity_tv"
                tools:text="12" />

            <View
                android:id="@+id/horizontal_line_q"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/quantity_value_tv" />

            <TextView
                android:id="@+id/flavor_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line_q" />

            <TextView
                android:id="@+id/flavor_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.flavor}"
                app:layout_constraintStart_toStartOf="@+id/flavor_tv"
                app:layout_constraintTop_toBottomOf="@+id/flavor_tv"
                tools:text="Chocolate" />

            <View
                android:id="@+id/horizontal_line_f"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/flavor_value_tv" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line_f" />

            <TextView
                android:id="@+id/date_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.date}"
                app:layout_constraintStart_toStartOf="@+id/date_tv"
                app:layout_constraintTop_toBottomOf="@+id/date_tv"
                tools:text="Dec 12" />

            <View
                android:id="@+id/horizontal_line_d"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/date_value_tv" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@{@string/total(viewModel.price)}"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line_d" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/send_button" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

