<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PickupDateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/date_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dec 11" />

            <RadioButton
                android:id="@+id/date_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dec 12" />

            <RadioButton
                android:id="@+id/date_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dec 13" />

            <RadioButton
                android:id="@+id/date_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dec 14" />
        </RadioGroup>

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/rb_group" />

        <TextView
            android:id="@+id/subtotal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/subtotal"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotal_tv" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/subtotal_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

